
the rules for this file:
  * entries are sorted newest-first.
  * summarise sets of changes.
  * don't ever delete anything.
  * keep the format consistent (79 char width, YYYY-MMM-DD date format).

------------------------------------------------------------------------------


2012-Jun-08 Tilmann Zaschke
		* Fixed broken MPRBoxBox test.
		* Improved performance of vec3/quat classes


		   ******************************************************************
2012-Jun-05 Tilmann Zaschke
		* Release of ode4j-0.12.0-j1.1
		   ******************************************************************

2012-Jun-05 Tilmann Zaschke
		* Added missing LIBCCD tests.
		* Fixed (improved?) LIBCCD ccd_list_t iteration

2012-Jun-04 Tilmann Zaschke
		* Added port of LIBCCD. Can be enabled via OdeConfig.setLIBCCDEnabled()

		   ******************************************************************
2012-Jun-02 Tilmann Zaschke
		* Release of ode4j-0.12.0-j1.0
		   ******************************************************************

2012-Jun-02 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Identified failing test (is because of GIMPACT)
		SUMMARY of changes for ode-0.12
		- Refactoring of OdeMath method names
		- Refactoring of OdeMath super-classes Matrix->DMatrix, ...
		- new functions in DGeom
		- Quickstep refactored and sped up
		- Clean-up of demos
		- New TrackDemo
		- Bug fixes


2012-May-29 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Fixed NPE in Step.java (e.g. DemoChain1)
		  - Fixed explosion in DemoCrash and DemoBuggy -> Step was faulty.

2012-May-26 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Fixed Step.java, all test work now, except one.
		  - Fixed QuickStep, much more stable now.
		  - Fixed some warnings

2012-May-18 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Initial version of migrated Step.java, still buggy
		  - Finished migration of all other files.

2012-May-17 Tilmann Zaschke
		* Migration to ode-0.12: