@@ -13,6 +13,7 @@ the rules for this file:
 2012-Jun-08 Tilmann Zaschke
 		* Fixed broken MPRBoxBox test.
 		* Improved performance of vec3/quat classes
+		* Fixed GJK collider. All tests run fine now.
 
 
 		   ******************************************************************
